[oc] update from Pootle (firefox)

--- a/browser/chrome/browser/aboutPrivateBrowsing.properties
+++ b/browser/chrome/browser/aboutPrivateBrowsing.properties
@@ -3,4 +3,4 @@
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
 title=Sètz a navigar d'un biais privat
-title.normal=Dobrir una fenèstra de navigacion &privada ?
+title.normal=Dobrir una fenèstra de navigacion privada ?
