--- a/browser/chrome/browser/accounts.properties
+++ b/browser/chrome/browser/accounts.properties
@@ -17,6 +17,8 @@ signInAfterUpgradeOnOtherDevice.accessKey = C
 # %S = Email address of user's Firefox Account
 needVerifiedUserShort = %S es pas verificat
 
+resendVerificationEmail.label = Tornar mandar
+resendVerificationEmail.accessKey = r
 
 
 
