--- a/browser/chrome/browser/devtools/appcacheutils.properties
+++ b/browser/chrome/browser/devtools/appcacheutils.properties
@@ -37,13 +37,13 @@ duplicateURI=L'URI %1$S es referenciat a d'endreches multiples. Aquò es pas aut
 # the resource name, %3$S is the line number, %4$S is the resource name, %5$S
 # is the section name.
 networkBlocksURI=La linha %1$S (%2$S) de la seccion NETWORK empacha la mesa en escondedor de la linha %3$S (%4$S) dins la seccion %5$S .
-fallbackBlocksURI=La linha %1$S (%2$S) de la seccion FALLBACK empacha la mesa en enscondedor de la linha  %3$S (%4$S) dins la seccion %5$S.
+fallbackBlocksURI=La linha %1$S (%2$S) de la seccion FALLBACK empacha la mesa en escondedor de la linha %3$S (%4$S) dins la seccion %5$S.
 
 # LOCALIZATION NOTE (fileChangedButNotManifest): the associated cache manifest
 # references a URI that has a file modified after the cache manifest.
 # Parameters: %1$S is the resource name, %2$S is the cache manifest, %3$S is
 # the line number.
-fileChangedButNotManifest=Lo fichièr %1$S es estat modificat aprèp %2$S. Levat se lo tèxte del fichièr manifèste es modificat, la version en escondedor serà utilizada a la plaça a la linha  %3$S.
+fileChangedButNotManifest=Lo fichièr %1$S es estat modificat aprèp %2$S. Levat se lo tèxte del fichièr manifèste es modificat, la version en escondedor serà utilizada a la plaça a la linha %3$S.
 
 # LOCALIZATION NOTE (cacheControlNoStore): the specified page has a header
 # preventing caching or storing information. Parameters: %1$S is the resource
