--- a/browser/chrome/browser/devtools/debugger.properties
+++ b/browser/chrome/browser/devtools/debugger.properties
@@ -315,4 +315,6 @@ functionSearchSeparatorLabel=←
 # resumed first.
 resumptionOrderPanelTitle=I a un o mantun desbugador en pausa. D'en primièr, reprenètz lo desbugador mes a jorn lo mai recentament a : %S
 
+variablesViewUninitialized=(pas inicializat)
+variablesViewMissingArgs=(indisponible)
 
