--- a/browser/chrome/browser/devtools/gcli.properties
+++ b/browser/chrome/browser/devtools/gcli.properties
@@ -165,7 +165,7 @@ helpListNone=Pas las comandas que començan per '%S'
 # to be able to describe the parameters as either required or optional, or if
 # they have a default value.
 helpManRequired=requesit
-helpManOptional=Opcional
+helpManOptional=opcional
 helpManDefault=opcional, defaut=%1$S
 
 # LOCALIZATION NOTE: This forms part of the output from the 'help' command.
@@ -195,7 +195,7 @@ contextNotParentError=Impossible d'utilizar « %S » coma prefixe de comanda per
 # LOCALIZATION NOTE (contextReply, contextEmptyReply): These messages are
 # displayed during the processing of the 'context' command, to indicate
 # success or that there is no command prefix.
-contextReply=%1$S es d'ara enlà utilizat coma prefixe de comanda
+contextReply=%1$S es d'ara enlà utilizat coma prefix de comanda
 contextEmptyReply=Cap de prefixe de comanda es pas definit
 
 # LOCALIZATION NOTE (connectDesc, connectManual, connectPrefixDesc,
