--- a/browser/chrome/browser/devtools/timeline.properties
+++ b/browser/chrome/browser/devtools/timeline.properties
@@ -33,6 +33,7 @@ timeline.tick=%S ms
 # LOCALIZATION NOTE (timeline.label.*):
 # These strings are displayed in the timeline waterfall, identifying markers.
 # We want to use the same wording as Google Chrome
+timeline.label.paint=Zòna actualizada
 timeline.label.consoleTime=Consòla :
 
 # LOCALIZATION NOTE (graphs.memory):
@@ -50,4 +51,5 @@ timeline.markerDetailFormat=%1$S (%2$S)
 # LOCALIZATION NOTE (time.markerDetail.*):
 # Strings used in the waterfall sidebar.
 timeline.markerDetail.start=Aviar :
+timeline.markerDetail.end=Fin :
 timeline.markerDetail.stack=Pila :
