--- a/browser/chrome/browser/devtools/webconsole.properties
+++ b/browser/chrome/browser/devtools/webconsole.properties
@@ -254,8 +254,12 @@ messageToggleDetails=Afichar/amagar los detalhs del messatge.
 
 # LOCALIZATION NOTE (table.index, table.iterationIndex, table.key, table.value):
 # the column header displayed in the console table widget.
+table.key=Clau
+table.value=Valors
 
 # LOCALIZATION NOTE (severity.error, severity.warn, severity.info, severity.log):
 # tooltip for icons next to console output
+severity.error=Error
+severity.warn=Avertiment
 severity.info=Info
 severity.log=Log
