--- a/browser/chrome/browser/loop/loop.properties
+++ b/browser/chrome/browser/loop/loop.properties
@@ -39,7 +39,11 @@ retry_button=Tornar ensajar
 ## between {{..}}.
 
 
+settings_menu_item_account=Compte
+settings_menu_item_settings=Paramètres
+settings_menu_item_signout=Se desconnectar
 settings_menu_item_signin=Connexion
+settings_menu_button_tooltip=Paramètres
 
 # Contact Strings (Panel)
 
@@ -52,6 +56,8 @@ contacts_search_placesholder=Recercar...
 ## LOCALIZATION NOTE (new_contact_name_placeholder, new_contact_email_placeholder):
 ## These are the placeholders for the fields for entering a new contact. Click
 ## the 'New Contact' button to see the fields.
+new_contact_name_placeholder=Nom
+new_contact_email_placeholder=Adreça electronica
 
 
 ## LOCALIZATION NOTE (add_contact_button):
@@ -115,6 +121,7 @@ edit_contact_done_button=Acabat
 
 ## LOCALIZATION NOTE(gravatars_promo_message): The {{learn_more}} part will be
 ## replaced with a link with the text content of gravatars_promo_message_learnmore.
+gravatars_promo_message_learnmore=Ne saber mai
 gravatars_promo_button_nothanks=Non, mercé
 
 # Conversation Window Strings
@@ -122,6 +129,7 @@ gravatars_promo_button_nothanks=Non, mercé
 incoming_call_cancel_button=Anullar
 incoming_call_block_button=Blocar
 hangup_button_caption2=Quitar
+active_screenshare_button_title=Arrestar lo partiment
 
 ## LOCALIZATION NOTE (call_with_contact_title): The title displayed
 ## when calling a contact. Don't translate the part between {{..}} because
@@ -130,6 +138,7 @@ hangup_button_caption2=Quitar
 # Outgoing conversation
 
 initiate_audio_video_call_button2=Aviar
+initiate_call_cancel_button=Anullar
 
 ## LOCALIZATION NOTE (call_progress_connecting_description): This is displayed
 ## whilst the client is contacting the client at the other end of the connection.
@@ -150,6 +159,9 @@ call_progress_connecting_description=Connexion…
 
 ## LOCALIZATION NOTE (retry_call_button, cancel_button, email_link_button):
 ## These buttons are displayed when a call has failed.
+retry_call_button=Tornar ensajar
+email_link_button=Mandar lo Ligam per mail
+cancel_button=Anullar
 
 
 ## LOCALIZATION NOTE (legal_text_and_links3): In this item, don't translate the
@@ -163,6 +175,7 @@ legal_text_privacy = Politica de confidencialitat
 ## logo.
 powered_by_afterLogo=
 
+feedback_category_other2=Autres
 ## LOCALIZATION NOTE (feedback_window_will_close_in2):
 ## Semicolon-separated list of plural forms. See:
 ## http://developer.mozilla.org/en/docs/Localization_and_Plurals
@@ -172,6 +185,7 @@ powered_by_afterLogo=
 ## LOCALIZATION NOTE (feedback_report_user_button): Used to report a user in the case of
 ## an abusive user.
 
+help_label=Ajuda
 
 ## LOCALIZATION NOTE(rooms_default_room_name_template): {{conversationLabel}}
 ## will be replaced by a number. For example "Conversation 1" or "Conversation 12".
@@ -186,6 +200,7 @@ rooms_list_deleteConfirmation_label=Sètz segur ?
 # Infobar strings
 
 infobar_button_gotit_label=Ai comprés !
+infobar_menuitem_dontshowagain_label=Me demandar pas pus
 
 # Context in conversation strings
 # LOCALIZATION NOTE (context_inroom_label): this string is followed by the
