--- a/browser/chrome/browser/places/places.properties
+++ b/browser/chrome/browser/places/places.properties
@@ -5,7 +5,7 @@
 load-js-data-url-error=Per de rasons de seguretat, las URL JavaScript o las URL de donadas pòdon pas èsser cargadas a partir de la fenèstra d'istoric o de la barra laterala.
 noTitle=(sens títol)
 
-bookmarksMenuEmptyFolder=(void)
+bookmarksMenuEmptyFolder=(Void)
 
 bookmarksBackupTitle=Fichièr de salvament dels marcapaginas
 
@@ -52,7 +52,7 @@ searchHistory=Recercar dins l'istoric
 searchDownloads=Recercar dins los telecargaments
 
 tabs.openWarningTitle=Confirmar la dobertura
-tabs.openWarningMultipleBranded=Sètz a mand de dobrir %S onglets. Pòt alentir %S pendent que las paginas se cargaràn. Sètz segur(a) que volètz contunhar ?
+tabs.openWarningMultipleBranded=Sètz a mand de dobrir %S onglets.  Pòt alentir %S pendent que las paginas se cargaràn.  Sètz segur(a) que volètz contunhar ?
 tabs.openButtonMultiple=Dobrir los onglets
 tabs.openWarningPromptMeBranded=M'alertar quand ensagi de dobrir mai d'un onglet que poirian alentir %S
 
