--- a/browser/chrome/browser/preferences/preferences.properties
+++ b/browser/chrome/browser/preferences/preferences.properties
@@ -16,7 +16,7 @@ labelDefaultFont=Per defaut (%S)
 
 #### Permissions Manager
 
-cookiepermissionstext=Podètz indicar los sites Web que son totjorn o son pas jamai autorizats a utilizar de cookies. Picatz l'adreça exacta del site e clicatz sus Blocar, Autorizar per la sesilha, o Autorizar.
+cookiepermissionstext=Podètz indicar los sites Web que son totjorn o son pas jamai autorizats a utilizar de cookies.  Picatz l'adreça exacta del site e clicatz sus Blocar, Autorizar per la sesilha, o Autorizar.
 cookiepermissionstitle=Excepcions - Cookies
 addonspermissionstext=Podètz indicar los sites web qu'autorizatz a installar de moduls complementaris. Picatz l'adreça exacta del site que volètz autorizar puèi clicatz sus Autorizar.
 addons_permissions_title=Sites autorizats - Moduls complementaris
@@ -48,7 +48,7 @@ chooseDownloadFolderTitle=Causissètz lo dorsièr de telecargament :
 
 #### Applications
 
-fileEnding=Fichièr %S
+fileEnding=fichièr %S
 saveFile=Enregistrar lo fichièr
 
 # LOCALIZATION NOTE (useApp, useDefault): %S = Application name
@@ -104,7 +104,7 @@ cookiesFiltered=Los cookies seguents correspondon a vòstra recèrca :
 #### Offline apps
 offlineAppsList.height=7em
 offlineAppRemoveTitle=Suprimir las donadas sens connexion del site
-offlineAppRemovePrompt=Quand auretz suprimit aquestas donadas, %S serà pas pus disponible sens connexion. Sètz segur que volètz suprimir aqueste site web sens connexion ?
+offlineAppRemovePrompt=Quand auretz suprimit aquestas donadas, %S serà pas pus disponible sens connexion.  Sètz segur que volètz suprimir aqueste site web sens connexion ?
 offlineAppRemoveConfirm=Suprimir las donadas sens connexion
 
 # LOCALIZATION NOTE: The next string is for the disk usage of the
@@ -122,7 +122,7 @@ offlinepermissionstitle=Donadas sens connexion
 #   e.g., "Your web content cache is currently using 200 MB"
 #   %1$S = size
 #   %2$S = unit (MB, KB, etc.)
-actualDiskCacheSize=Lo contengut Web en escondedor utiliza actualament %1$S %2$S d'espaci de disc
+actualDiskCacheSize=Lo contengut web en escondedor utiliza actualament %1$S %2$S d'espaci de disc
 actualDiskCacheSizeCalculated=Calcul de la talha del contengut web en escondedor…
 
 ####Preferences::Advanced::Network
