--- a/browser/chrome/browser/shellservice.properties
+++ b/browser/chrome/browser/shellservice.properties
@@ -9,6 +9,8 @@ safeModeLabel=%S &Mòde sens fracàs
 # %S will be replaced by brandShortName
 setDefaultBrowserOptions.label     = Opcions
 setDefaultBrowserOptions.accesskey = O
+setDefaultBrowserNotNow.label      = Pas ara
+setDefaultBrowserNotNow.accesskey  = P
 setDefaultBrowserNever.label       = Demandar pas mai
 setDefaultBrowserNever.accesskey   = p
 
@@ -18,6 +20,7 @@ setDefaultBrowserNever.accesskey   = p
 setDefaultBrowserTitle=Navigador per defaut
 setDefaultBrowserMessage=%S es pas definit coma vòstre navigador per defaut. Ne volètz far vòstre navigador per defaut ?
 setDefaultBrowserDontAsk=Totjorn far la verificacion a l'aviada de %S.
+setDefaultBrowserAlertNotNow.label=Pas ara
 
 desktopBackgroundLeafNameWin=Fons d'ecran.bmp
 DesktopBackgroundDownloading=Enregistrament de l'imatge...
