--- a/dom/chrome/accessibility/AccessFu.properties
+++ b/dom/chrome/accessibility/AccessFu.properties
@@ -88,11 +88,11 @@ textInputType_url    =       URL
 headingLevel   =       nivèl de títol %S
 
 # more sophisticated list announcement
-listStart      =       element de lista
-listEnd        =       element de lista
+listStart      =       Primièr element
+listEnd        =       Darrièr element
 # LOCALIZATION NOTE (listItemsCount): Semi-colon list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-listItemsCount =       Un element;#1 elements
+listItemsCount =       1 element;#1 elements
 
 # LOCALIZATION NOTE: # %1$S is the position of the item n the set.
 # %2$S is the total number of such items in the set.
