--- a/dom/chrome/layout/htmlparser.properties
+++ b/dom/chrome/layout/htmlparser.properties
@@ -27,7 +27,7 @@ errCharRefLacksSemicolon=Referéncia de caractèr pas acabada per un punt virgul
 errNoDigitsInNCR=Pas de chifra dins una referéncia de caractèr numeric.
 errGtInSystemId=« > » dins l'identificant del sistèma.
 errGtInPublicId=« > » Dins l'identificant public.
-errNamelessDoctype=doctype sens nom.
+errNamelessDoctype=Doctype sens nom.
 errConsecutiveHyphens=Tirets consecutius que tampan pas un comentari. « -- » es pas autorizat a l'interior d'un comentari, mas « - - » l'es per exemple.
 errPrematureEndOfComment=Fin prematurada d'un comentari. Utilizar « --> » per tampar corrèctament un comentari.
 errBogusComment=Comentari erronèu.
@@ -53,7 +53,7 @@ errQuoteBeforeAttributeName=Una vergueta es estada rencontrada mentre qu'un nom 
 errLtInAttributeName=« < » dins un nom d'atribut. Causa probabla : « > » mancant immediatament abans.
 errQuoteInAttributeName=Vergueta dins un nom d'atribut. Causa probabla : vergueta correspondenta mancanta precedentament dins lo còde.
 errExpectedPublicId=Identificant public esperat mas doctype es estat tampat.
-errBogusDoctype=doctype erronèu.
+errBogusDoctype=Doctype erronèu.
 maybeErrAttributesOnEndTag=La balisa tampanta aviá d'atributs.
 maybeErrSlashInEndTag=« / » imprevist a la fin d'una balisa tampanta.
 errNcrNonCharacter=La referéncia de caractèr es remplaçada per un non-caractèr.
@@ -129,3 +129,4 @@ errSelfClosing=Sintaxi autotampanta (« /> ») utilizada sus un element HTML p
 errNoCheckUnclosedElementsOnStack=Elements pas tampats sus la pila.
 errEndTagDidNotMatchCurrentOpenElement=Balisa tampanta « %1$S » que correspond pas al nom de l'element dobèrt (« %2$S »).
 errEndTagViolatesNestingRules=Balisa tampanta « %1$S » en violacion de las règlas d'imbricacion.
+errEndWithUnclosedElements=Balisa de fin « %1$S » rencontrada, mas cap d'element èra pas dobèrt.
