--- a/security/manager/chrome/pippki/pippki.properties
+++ b/security/manager/chrome/pippki/pippki.properties
@@ -38,6 +38,7 @@ deleteOrphanCertTitle=Suprimir de certificats
 chooseP12RestoreFileDialog2=Fichièr de certificat d'importar
 chooseP12BackupFileDialog=Nom de fichièr de salvagardar
 file_browse_PKCS12_spec=Fichièrs PKCS12
+getPKCS12FilePasswordMessage=Picatz lo senhal per chifrar la còpia de seguretat d'aqueste certificat :
 
 #Cert verification
 certVerified=Aqueste certificat es estat verificat per las utilizacions seguentas :
@@ -64,6 +65,7 @@ pageInfo_Privacy_None3=La pagina que sètz a visualizar es pas criptada.
 # %2$S is the key size of the cipher.
 # %3$S is protocol version like "SSL 3" or "TLS 1.2"
 pageInfo_Privacy_Encrypted1=La pagina que vesètz es estada chifrada abans sa transmission sus Internet.
+pageInfo_Privacy_Encrypted2=Lo chiframent fa fòrt dificil a las personas pas autorizadas la visualizacion de la pagina durant son transit entre ordenadors. Doncas, es fòrt improbable que qualqu'un pòsca legir aquesta pagina durant son transit sus la ret.
 pageInfo_MixedContent=Connexion parcialament chifrada
 
 #Cert Viewer
@@ -130,10 +132,13 @@ addExceptionInvalidHeader=Aqueste sit ensaja de s'identificar ele-meteis amb d'e
 addExceptionDomainMismatchShort=Sit marrit
 addExceptionExpiredShort=Entresenhas obsoletas
 addExceptionUnverifiedOrBadSignatureShort=Identitat desconeguda
+addExceptionUnverifiedOrBadSignatureLong2=Lo certificat es pas segur perque es pas estat verificat per una autoritat reconeguda.
 addExceptionValidShort=Certificat valid
 addExceptionValidLong=Aqueste sit provesís una identificacion valida e certificada. Es pas necessari d'apondre una excepcion.
 addExceptionCheckingShort=Verificacion de las entresenhas
+addExceptionCheckingLong2=Temptativa d'identificacion del site…
 addExceptionNoCertShort=Pas d'entresenhas disponiblas
+addExceptionNoCertLong2=Impossible d'obténer l'estat d'identificacion pel site donat.
 
 #Certificate Exists in database
 caCertExistsTitle=Lo certificat existís
