--- a/toolkit/chrome/global/aboutReader.properties
+++ b/toolkit/chrome/global/aboutReader.properties
@@ -2,15 +2,35 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
+aboutReader.loading=Cargament...
+aboutReader.loadError=Impossible de cargar l'article dempuèi la pagina
 
+aboutReader.colorScheme.light=Clar
+aboutReader.colorScheme.dark=Negre
+aboutReader.colorScheme.sepia=Sèpia
+aboutReader.colorScheme.auto=Auto
 
 # LOCALIZATION NOTE (aboutReader.fontType.serif, aboutReader.fontType.sans-serif):
 # These are the styles of typeface that are options in the reader view controls.
 aboutReader.fontType.serif=Serif
+aboutReader.fontType.sans-serif=Sans-serif
 
 # LOCALIZATION NOTE (aboutReader.fontTypeSample): String used to sample font types.
+aboutReader.fontTypeSample=Aa
 
+aboutReader.toolbar.close=Tampar la vista de lectura
+aboutReader.toolbar.typeControls=Contraròtles de tipes
+aboutReader.toolbar.addToReadingList=Apondre a la lista de lectura
+aboutReader.toolbar.removeFromReadingList=Suprimir de la lista de lectura
+aboutReader.toolbar.openReadingList=Dobrir la lista de lectura
+aboutReader.toolbar.closeReadingList=Tampar la lista de lectura
+aboutReader.toolbar.share=Partejar
 
+aboutReader.footer.deleteThisArticle=Suprimir aqueste article
 
 # These are used for the Reader View toolbar button and the menuitem within the
 # View menu.
+readerView.enter=Entrar dins la vista de lectura
+readerView.enter.accesskey=l
+readerView.close=Tampar la vista de lectura
+readerView.close.accesskey=l
