--- a/toolkit/chrome/global/aboutTelemetry.properties
+++ b/toolkit/chrome/global/aboutTelemetry.properties
@@ -10,6 +10,7 @@ pageSubtitle = Aquesta pagina aficha las informacions collectadas per telemetria
 
 generalDataHeadingName = Nom
 
+generalDataHeadingValue = Valor
 
 
 
@@ -55,6 +56,7 @@ enableTelemetry = Activar la telemetria
 
 keysHeader = Proprietat
 
+valuesHeader = Valor
 
 addonTableID = Identificant del modul
 
