--- a/toolkit/chrome/global/devtools/debugger.properties
+++ b/toolkit/chrome/global/devtools/debugger.properties
@@ -16,10 +16,12 @@ remoteIncomingPromptTitle=Connexion entranta
 
 # LOCALIZATION NOTE (remoteIncomingPromptHeader): Header displayed on the
 # dialog that prompts the user to allow the incoming connection.
+remoteIncomingPromptHeader=Una requèsta entranta per permetre una connexion de desbugatge a distància es estada detectada. Un client distant pòt prene lo contraròtle complet de vòstre navigador !
 # LOCALIZATION NOTE (remoteIncomingPromptClientEndpoint): Part of the prompt
 # dialog for the user to choose whether an incoming connection should be
 # allowed.
 # %1$S: The host and port of the client such as "127.0.0.1:6000"
+remoteIncomingPromptClientEndpoint=Punt final del client : %1$S
 # LOCALIZATION NOTE (remoteIncomingPromptServerEndpoint): Part of the prompt
 # dialog for the user to choose whether an incoming connection should be
 # allowed.
@@ -39,6 +41,7 @@ remoteIncomingPromptDisable=Desactivar
 # LOCALIZATION NOTE (clientSendOOBHash): Part of the dialog that instructs the
 # user to transfer an authentication token to the server.
 # %1$S: The client's cert fingerprint
+clientSendOOBHash=Mon certificat : %1$S
 # LOCALIZATION NOTE (clientSendOOBToken): Part of the dialog that instructs the
 # user to transfer an authentication token to the server.
 # %1$S: The authentication token that the user will transfer.
