--- a/toolkit/chrome/global/devtools/styleinspector.properties
+++ b/toolkit/chrome/global/devtools/styleinspector.properties
@@ -91,6 +91,7 @@ ruleView.contextmenu.copyColor=Copiar la color
 
 # LOCALIZATION NOTE (ruleView.contextmenu.copyColor.accessKey): Access key for
 # the rule and computed view context menu "Copy Color" entry.
+ruleView.contextmenu.copyColor.accessKey=L
 
 # LOCALIZATION NOTE (ruleView.contextmenu.showOrigSources): Text displayed in the rule view
 # context menu.
