--- a/browser/chrome/browser/browser.properties
+++ b/browser/chrome/browser/browser.properties
@@ -19,6 +19,7 @@ contextMenuSearch.accesskey=S
 
 bookmarkAllTabsDefault=[Nom de repertòri]
 
+xpinstallPromptMessage=%S a empachat aqueste site de vos demandar d'installar un logicial sul vòstre ordenador.
 xpinstallPromptAllowButton=Autorizar
 # Accessibility Note:
 # Be sure you do not choose an accesskey that is used elsewhere in the active context (e.g. main menu bar, submenu of the warning popup button)
@@ -37,6 +38,8 @@ addonDownloadVerifying=Verificacion en cors
 
 addonInstall.cancelButton.label=Anullar
 addonInstall.cancelButton.accesskey=A
+addonInstall.acceptButton.label=Installar
+addonInstall.acceptButton.accesskey=I
 
 # LOCALIZATION NOTE (addonConfirmInstallMessage):
 # Semicolon-separated list of plural forms. See:
@@ -44,6 +47,10 @@ addonInstall.cancelButton.accesskey=A
 # #1 is brandShortName
 # #2 is the number of add-ons being installed
 
+addonwatch.disable.label=Desactivar %S
+addonwatch.disable.accesskey=D
+addonwatch.restart.label=Tornar aviar %S
+addonwatch.restart.accesskey=r
 
 # LOCALIZATION NOTE (addonsInstalled, addonsInstalledNeedsRestart):
 # Semicolon-separated list of plural forms. See:
@@ -67,6 +74,7 @@ addonError-4=#1 a pas pogut èsser installat perque #3 pòt pas modificar lo fic
 addonLocalError-1=Aqueste modul complementari a pas pogut èsser installat a causa d'una error del sistèma de fichièrs.
 addonLocalError-2=Aqueste modul complementari a pas pogut èsser installat perque correspond pas al modul de #3 esperat.
 addonLocalError-3=Aqueste modul complementari a pas pogut èsser installat perque sembla qu'es corromput.
+addonLocalError-4=#1 a pas pogut èsser installat perque #3 pòt pas modificar lo fichièr requesit.
 addonErrorIncompatible=#1 a pas pogut èsser installat perque es pas compatible amb #3 #4.
 addonErrorBlocklisted=#1 a pas pogut èsser installat perque presenta un grand risc de problèmas d'instabilitat o de seguretat.
 
@@ -76,6 +84,7 @@ addonErrorBlocklisted=#1 a pas pogut èsser installat perque presenta un grand r
 # LOCALIZATION NOTE (lwthemeInstallRequest.message): %S will be replaced with
 # the host name of the site.
 lwthemeInstallRequest.message=Aqueste site (%S) a ensajat d'installar un tèma.
+lwthemeInstallRequest.allowButton=Autorizar
 
 lwthemePostInstallNotification.message=Un tèma novèl s'es installat.
 lwthemePostInstallNotification.undoButton=Anullar
@@ -84,6 +93,7 @@ lwthemePostInstallNotification.manageButton=Gerir los tèmas…
 # LOCALIZATION NOTE (lwthemeNeedsRestart.message):
 # %S will be replaced with the new theme name.
 lwthemeNeedsRestart.message=%S serà installat aprèp una reaviada.
+lwthemeNeedsRestart.button=Reaviar ara
 lwthemeNeedsRestart.accesskey=R
 
 # LOCALIZATION NOTE (popupWarning.message): Semicolon-separated list of plural forms.
@@ -121,6 +131,7 @@ keywordURIFixup.dismiss=Non, mercé
 # is the site domain.
 pluginActivateNew.message=Autorizar %2$S a executar « %1$S » ?
 pluginActivateMultiple.message=Autorizar %S a executar aquestes plugins ?
+pluginActivate.learnMore=Ne saber mai…
 # LOCALIZATION NOTE (pluginActivateOutdated.message, pluginActivateOutdated.label):
 # These strings are used when an unsafe plugin has an update available.
 # %1$S is the plugin name, %2$S is the domain, and %3$S is brandShortName.
@@ -142,6 +153,7 @@ pluginActivateDisabled.manage=Gerir los plugins...
 pluginEnabled.message=« %S » es activat sus %S.
 pluginEnabledOutdated.message=Lo plugin obsolèt « %S » es activat sus %S.
 pluginEnabledVulnerable.message=Lo plugin vulnerable « %S » es activat sus %S.
+pluginInfo.unknownPlugin=Desconegut
 
 # LOCALIZATION NOTE (pluginActivateNow.label, pluginActivateAlways.label, pluginBlockNow.label): These should be the same as the matching strings in browser.dtd
 # LOCALIZATION NOTE (pluginActivateNow.label): This button will enable the
@@ -228,6 +240,7 @@ tabHistory.goForward=Tornar a aquesta pagina
 pasteAndGo.label=Pegar e anar
 
 # Block autorefresh
+refreshBlocked.goButton=Autorizar
 refreshBlocked.refreshLabel=%S a empachat lo recargament automatic d'aquesta pagina.
 refreshBlocked.redirectLabel=%S a empachat la redireccion automatica cap a una autra pagina.
 
@@ -265,6 +278,7 @@ newTabButton.tooltip=Dobrir un onglet novèl (%S)
 
 # Offline web applications
 offlineApps.available=Aqueste site web (%S) vòl conservar de donadas sus vòstre ordenador per una utilizacion sens connexion.
+offlineApps.allow=Autorizar
 offlineApps.never=Pas jamai per aqueste site
 offlineApps.notNow=Pas ara
 
@@ -288,6 +302,7 @@ identity.chrome=Aquò es una pagina securizada de %S.
 editBookmarkPanel.pageBookmarkedTitle=Pagina marcada
 editBookmarkPanel.pageBookmarkedDescription=%S se remembrarà totjorn d'aquesta pagina per vos.
 editBookmarkPanel.bookmarkedRemovedTitle=Marcapaginas suprimit
+editBookmarkPanel.editBookmarkTitle=Modificar aqueste marcapaginas
 
 # LOCALIZATION NOTE (editBookmark.removeBookmarks.label): Semicolon-separated list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
@@ -360,7 +375,7 @@ tabview.title=%S - Gropes d'onglets
 tabview.moveToUnnamedGroup.label=#1 e 1 mai;#1 e #2 mai
 
 # LOCALIZATION NOTE (tabviewButton.tooltip): %S is the keyboard shortcut for tab groups
-tabviewButton.tooltip=Organizar los onglets  (%S)
+tabviewButton.tooltip=Organizar los onglets (%S)
 
 extensions.{972ce4c6-7e08-4474-a285-3208198ce6fd}.name=Tèma per defaut
 extensions.{972ce4c6-7e08-4474-a285-3208198ce6fd}.description=Tèma per defaut
@@ -388,6 +403,7 @@ syncPromoNotification.bookmarks.description=Podètz accedir a vòstres marcapagi
 # the remember password panel.  %S will be replaced by syncBrandShortName.
 # The final space separates this text from the Learn More link.
 syncPromoNotification.passwords.description=Podètz accedir a vòstres senhals sus totes vòstres aparelhs gràcias a %S.\u0020
+syncPromoNotification.learnMoreLinkText=Ne saber mai
 # LOCALIZATION NOTE (syncPromoNotification.addons.label): This appears in
 # the add-on install complete panel when Sync isn't set.
 # %S will be replaced by syncBrandShortName.
@@ -405,6 +421,8 @@ dataReportingNotification.button.label  = Causir çò que mandi
 dataReportingNotification.button.accessKey  = C
 
 # Process hang reporter
+processHang.button.label = Opcions
+processHang.button.accessKey = O
 
 # Webapps notification popup
 webapps.install = Installar
@@ -477,10 +495,12 @@ getUserMedia.shareCamera.message = Volètz partejar vòstra webcam amb %S ?
 getUserMedia.shareMicrophone.message = Volètz partejar vòstre microfòn amb %S ?
 getUserMedia.shareScreen.message = Volètz partejar vòstra ecran amb %S ?
 getUserMedia.shareCameraAndMicrophone.message = Volètz partejar vòstra webcam e vòstre microfòn amb %S ?
-getUserMedia.shareScreenAndMicrophone.message = Volètz partejar vòstre microfòn e  vòstre ecran amb %S ?
+getUserMedia.shareScreenAndMicrophone.message = Volètz partejar vòstre microfòn e vòstre ecran amb %S ?
 getUserMedia.selectScreen.label=Ecran de partejar :
 getUserMedia.selectScreen.accesskey=c
 getUserMedia.noVideo.label = Pas cap de vidèo
+getUserMedia.noApplication.label = Pas cap d'aplicacion
+getUserMedia.noWindow.label = Pas cap de fenèstra
 getUserMedia.noAudio.label = Pas cap d'àudio
 getUserMedia.shareEntireScreen.label = Ecran complet
 # LOCALIZATION NOTE (getUserMedia.shareApplicationWindowCount.label):
@@ -505,8 +525,10 @@ getUserMedia.never.accesskey = j
 getUserMedia.sharingCamera.message2 = Actualament, partejatz vòstra webcam amb aquesta pagina.
 getUserMedia.sharingMicrophone.message2 = Actualament, partejatz vòstra webcam amb aquesta pagina.
 getUserMedia.sharingCameraAndMicrophone.message2 = Actualament, partejatz vòstra webcam e vòstre microfòn amb aquesta pagina.
+getUserMedia.sharingApplication.message = Actualament, partejatz una aplicacion amb aquesta pagina.
 getUserMedia.sharingScreen.message = Actualament, partejatz vòstre ecran amb aquesta pagina.
 getUserMedia.sharingWindow.message = Actualament, partejatz vòstra una fenèstra amb aquesta pagina.
+getUserMedia.sharingBrowser.message = Actualament, partejatz un onglet amb aquesta pagina.
 getUserMedia.continueSharing.label = Contunhar lo partiment
 getUserMedia.continueSharing.accesskey = C
 getUserMedia.stopSharing.label = Arrestar lo partiment
@@ -539,9 +561,11 @@ getUserMedia.stopSharing.accesskey = s
 
 # LOCALIZATION NOTE(emeNotifications.drmContentDisabled.message): NB: inserted via innerHTML, so please don't use <, > or & in this string. %S will be the 'learn more' link
 # LOCALIZATION NOTE(emeNotifications.drmContentDisabled.learnMoreLabel): NB: inserted via innerHTML, so please don't use <, > or & in this string.
+emeNotifications.drmContentDisabled.learnMoreLabel = Ne saber mai
 
 # LOCALIZATION NOTE(emeNotifications.drmContentCDMNotSupported.message): NB: inserted via innerHTML, so please don't use <, > or & in this string. %1$S is brandShortName, %2$S will be the 'learn more' link
 # LOCALIZATION NOTE(emeNotifications.drmContentCDMNotSupported.learnMoreLabel): NB: inserted via innerHTML, so please don't use <, > or & in this string.
+emeNotifications.drmContentCDMNotSupported.learnMoreLabel = Ne saber mai
 
 # LOCALIZATION NOTE(emeNotifications.drmContentCDMInsufficientVersion.message): NB: inserted via innerHTML, so please don't use <, > or & in this string. %S is brandShortName
 
@@ -550,7 +574,10 @@ getUserMedia.stopSharing.accesskey = s
 # LOCALIZATION NOTE(emeNotifications.drmContentCDMNotSupported.64bit.message): NB: inserted via innerHTML, so please don't use <, > or & in this string. %1$S is brandShortName, %2$S will be the 'learn more' link
 # LOCALIZATION NOTE(emeNotifications.drmContentCDMNotSupported.unsupportedOS.message): NB: inserted via innerHTML, so please don't use <, > or & in this string. %1$S is brandShortName, %2$S is the name of the user's OS (Windows, Linux, Mac OS X), %3$S will be the 'learn more' link
 
+emeNotifications.optionsButton.label = Opcions
+emeNotifications.optionsButton.accesskey = O
 
+emeNotifications.unknownDRMSoftware = Desconegut
 
 # LOCALIZATION NOTE - %S is brandShortName
 slowStartup.message = %S sembla lent… d'… aviar.
@@ -560,6 +587,8 @@ slowStartup.disableNotificationButton.label = M'avertir pas mai
 slowStartup.disableNotificationButton.accesskey = a
 
 # LOCALIZATION NOTE  - %S is brandShortName
+flashHang.helpButton.label = Ne saber mai…
+flashHang.helpButton.accesskey = s
 
 # LOCALIZATION NOTE(customizeTips.tip0): %1$S will be replaced with the text defined
 # in customizeTips.tip0.hint, %2$S will be replaced with brandShortName, %3$S will
@@ -573,6 +602,7 @@ customizeTips.tip0.learnMore = Ne saber mai
 # installation or a background update has failed and a manual download is required.
 # %S is brandShortName
 appmenu.restartBrowserButton.label = Tornar aviar %S
+appmenu.downloadUpdateButton.label = Telecargar una mesa a jorn
 
 # LOCALIZATION NOTE : FILE Reading List and Reader View are feature names and therefore typically used as proper nouns.
 
@@ -593,13 +623,16 @@ readingList.promo.firstUse.exitTourButton = Tampar
 # LOCALIZATION NOTE(readingList.promo.firstUse.readingList.multipleStepsTitle):
 # This is used when there are multiple steps in the tour.
 # %1$S is the current step's title (readingList.promo.firstUse.*.title), %2$S is the current step number of the tour, %3$S is the total number of steps.
+readingList.promo.firstUse.multipleStepsTitle = %1$S (%2$S/%3$S)
 # LOCALIZATION NOTE(readingList.promo.firstUse.readingList.moveToButton):
 # » is used as an indication that pressing this button progresses through the tour.
 # LOCALIZATION NOTE(readingList.promo.firstUse.readerView.moveToButton):
 # » is used as an indication that pressing this button progresses through the tour.
+readingList.promo.firstUse.syncNotSignedIn.title = Sync
 # LOCALIZATION NOTE(readingList.promo.firstUse.syncNotSignedIn.body): %S is brandShortName
 # LOCALIZATION NOTE(readingList.promo.firstUse.syncNotSignedIn.moveToButton):
 # » is used as an indication that pressing this button progresses through the tour.
+readingList.promo.firstUse.syncSignedIn.title = Sync
 # LOCALIZATION NOTE(readingList.promo.firstUse.syncSignedIn.body): %S is brandShortName
 # LOCALIZATION NOTE(readingList.promo.firstUse.syncSignedIn.moveToButton):
 # » is used as an indication that pressing this button progresses through the tour.
