--- a/browser/chrome/browser/devtools/animationinspector.properties
+++ b/browser/chrome/browser/devtools/animationinspector.properties
@@ -13,6 +13,7 @@
 # LOCALIZATION NOTE (player.animationNameLabel):
 # This string is displayed in each animation player widget. It is the label
 # displayed before the animation name.
+player.animationNameLabel=Animacion :
 
 # LOCALIZATION NOTE (player.transitionNameLabel):
 # This string is displayed in each animation player widget. It is the label
@@ -39,3 +40,4 @@
 # This string is displayed in each animation player widget, to indicate either
 # how long (in seconds) the animation lasts, or what is the animation's current
 # time (in seconds too);
+player.timeLabel=%Ss
