--- a/browser/chrome/browser/devtools/gclicommands.properties
+++ b/browser/chrome/browser/devtools/gclicommands.properties
@@ -14,7 +14,7 @@
 
 # LOCALIZATION NOTE (helpDesc) A very short string used to describe the
 # function of the help command.
-helpDesc=Per mai d'entresenhas, consultatz MDN.
+helpDesc=Obténer d'ajuda sus las comandas disponiblas
 
 # LOCALIZATION NOTE (helpAvailable) Used in the output of the help command to
 # explain the contents of the command help table.
@@ -104,7 +104,7 @@ screenshotFullPageManual=True se la captura deu tanben prene en compte las parti
 # LOCALIZATION NOTE (screenshotSelectorChromeConflict) Exception thrown when user
 # tries to use 'selector' option along with 'chrome' option of the screenshot
 # command. Refer: https://bugzilla.mozilla.org/show_bug.cgi?id=659268#c7
-screenshotSelectorChromeConflict=True se la captura deu tanben prene en compte las partidas de la pagina Web que son actualament en defòra de la zòna de desfilament visibla
+screenshotSelectorChromeConflict=L'opcion selector es pas presa en carga quand l'opcion chrome es a true
 
 # LOCALIZATION NOTE (screenshotGeneratedFilename) The auto generated filename
 # when no file name is provided. The first argument (%1$S) is the date string
@@ -370,7 +370,7 @@ tiltRotateZManual=Rotacion en grases del modèl 3D de la pagina Web sus l'axe Z
 # command. See tiltZoomManual for a fuller description of what it does. This
 # string is designed to be shown in a menu alongside the command name, which
 # is why it should be as short as possible.
-tiltZoomDesc=Raprochar o aluenhar lo modèl 3D
+tiltZoomDesc=Raprochar o alunhar lo modèl 3D
 
 # LOCALIZATION NOTE (tiltZoomManual) A fuller description of the 'tilt zoom'
 # command, displayed when the user asks for help on what it does.
@@ -882,7 +882,7 @@ pagemodRemoveAttributeDesc=Suprimir los atributs correspondents
 # string to describe the 'searchAttributes' parameter to the 'pagemod remove
 # attribute' command, which is displayed in a dialog when the user is using this
 # command.
-pagemodRemoveAttributeSearchAttributesDesc=Suprimir d'atributs especificats per una Regexp
+pagemodRemoveAttributeSearchAttributesDesc=Suprimir d'atributs especificats per expression regulara
 
 # LOCALIZATION NOTE (pagemodRemoveAttributeSearchElementsDesc) A very short
 # string to describe the 'searchElements' parameter to the 'pagemod remove
