--- a/browser/chrome/browser/devtools/storage.properties
+++ b/browser/chrome/browser/devtools/storage.properties
@@ -24,6 +24,7 @@ storage.label=Emmagazinatge
 # LOCALIZATION NOTE (storage.menuLabel):
 # This string is displayed in the Tools menu as a shortcut to open the devtools
 # with the Storage Inspector tab selected.
+storage.menuLabel=Inspector d'emmagazinatge
 
 # LOCALIZATION NOTE (storage.panelLabel):
 # This string is used as the aria-label for the iframe of the Storage Inspector
@@ -45,6 +46,7 @@ storage.label=Emmagazinatge
 # These strings are the labels for Storage type groups present in the Storage
 # Tree, like cookies, local storage etc.
 tree.labels.cookies=Cookies
+tree.labels.indexedDB=BD indexada
 
 # LOCALIZATION NOTE (table.headers.*.*):
 # These strings are the header names of the columns in the Storage Table for
@@ -52,6 +54,8 @@ tree.labels.cookies=Cookies
 table.headers.cookies.name=Nom
 table.headers.cookies.path=Camin
 table.headers.cookies.host=Domeni
+table.headers.cookies.expires=Expira lo
+table.headers.cookies.value=Valor
 # LOCALIZATION NOTE (table.headers.cookies.isHttpOnly):
 # This string is used in the header for the column which denotes whether a
 # cookie is HTTP only or not.
@@ -80,6 +84,7 @@ table.headers.indexedDB.keyPath=Clau
 
 # LOCALIZATION NOTE (storage.search.placeholder):
 # This is the placeholder text in the sidebar search box
+storage.search.placeholder=Filtrar las valors
 
 # LOCALIZATION NOTE (storage.data.label):
 # This is the heading displayed over the item value in the sidebar
