--- a/browser/chrome/browser/devtools/toolbox.properties
+++ b/browser/chrome/browser/devtools/toolbox.properties
@@ -64,7 +64,7 @@ scratchpad.keycode=VK_F4
 # LOCALIZATION NOTE (browserConsoleCmd.commandkey)
 # Used for toggling the browser console from the detached toolbox window
 # Needs to match browserConsoleCmd.commandkey from browser.dtd
-browserConsoleCmd.commandkey=VK_F4
+browserConsoleCmd.commandkey=j
 
 # LOCALIZATION NOTE (pickButton.tooltip)
 # This is the tooltip of the pick button in the toolbox toolbar
