--- a/browser/chrome/browser/search.properties
+++ b/browser/chrome/browser/search.properties
@@ -6,6 +6,7 @@ searchtip=Recercar amb %S
 
 # LOCALIZATION NOTE (searchPlaceholder): this is shown in the searchbox when
 # the user hasn't typed anything yet.
+searchPlaceholder=Recercar
 
 # LOCALIZATION NOTE (searchHeader): this is displayed at the top of the panel
 # showing search suggestions.
@@ -19,7 +20,7 @@ cmd_clearHistory=Voidar l'istoric de recèrca
 cmd_clearHistory_accesskey=E
 
 cmd_showSuggestions=Visualizar las suggestions
-cmd_showSuggestions_accesskey=s
+cmd_showSuggestions_accesskey=h
 
 # LOCALIZATION NOTE (cmd_addFoundEngine): %S is replaced by the name of
 # a search engine offered by a web page. Each engine is displayed as a
@@ -29,3 +30,4 @@ cmd_addFoundEngine=Apondre "%S"
 # are offered by a web page, instead of listing all of them in the
 # search panel using the cmd_addFoundEngine string, they will be
 # grouped in a submenu using cmd_addFoundEngineMenu as a label.
+cmd_addFoundEngineMenu=Apondre un motor de recèrca
