--- a/dom/chrome/layout/css.properties
+++ b/dom/chrome/layout/css.properties
@@ -38,7 +38,7 @@ PEKeyframeNameEOF=nom de la règla @keyframes.
 PEKeyframeBadName=Identificador esperat pel nom de la règla @keyframes.
 PEKeyframeBrace=« { » esperat per la règla @keyframes.
 PESkipDeclBraceEOF=Tampadura } d'un blòt de declaracion
-PESkipRSBraceEOF=Tampadura } d'un jòc de règlas invalid
+PESkipRSBraceEOF=Tampadura } d'un jòc de règlas invalida
 PEBadSelectorRSIgnored=Jòs de règlas ignorat en seguida d'un selector marrit.
 PEBadSelectorKeyframeRuleIgnored=Règla keyframe ignorada en seguida d'un marrit selector.
 PESelectorListExtraEOF=« , » o « { »
@@ -47,9 +47,13 @@ PESelectorGroupNoSelector=Selector inesperat.
 PESelectorGroupExtraCombinator=Combinator blocant.
 PECounterStyleNotIdent=Identificador esperat pel nom de la règla @counter-style.
 PECounterStyleBadBlockStart=Esperàvem '{' per començar la règla @counter-style mas avèm trobat '%1$S'.
+PECounterDescExpected=Descriptor de poliça esperat mas «%1$S» trobat.
+PEUnknownCounterDesc=Descriptor «%1$S» desconegut dins la règla @counter-style.
+PECounterExtendsNotIdent=Identificant per un selector de classa inesperat, mas « %1$S » es estat trobat.
 PEClassSelEOF=nom de classa
 PEClassSelNotIdent=Identificant per un selector de classa inesperat, mas « %1$S » es estat trobat.
-PETypeSelEOF=Tipe d'element
+PECoordinatePair=Un entièr èra esperat, mas « %1$S » es estat trobat.
+PETypeSelEOF=tipe d'element
 PETypeSelNotType=Nom d'element o « * » inesperat, mas « %1$S » es estat trobat.
 PEUnknownNamespacePrefix=Prefix d'espaci de nom '%1$S' desconegut.
 PEAttributeNameEOF=nom d'atribut
@@ -98,6 +102,8 @@ PEColorSaturationEOF=saturacion
 PEColorLightnessEOF=luminositat
 PEColorOpacityEOF=opacitat en valor de color
 PEExpectedNumber=Un nombre èra esperat, mas « %1$S » es estat trobat.
+PEExpectedPosition=Una declaracion èra esperada, mas « %1$S » es estat trobat.
+PEExpectedRadius=Radius esperat, mas « %1$S » es estat trobat.
 PEExpectedCloseParen=Parentèsi tampanta « ) » esperada, mas « %1$S » es estat trobat.
 PEDeclEndEOF=« ; » o « } » per tampar una declaracion
 PEParseDeclarationNoColon=« : » èra esperat, mas « %1$S » es estat trobat.
@@ -112,10 +118,10 @@ PECommentEOF=fin de comentari
 SEUnterminatedString=Cadena pas tampada trobada « %1$S ».
 PEFontDescExpected=Descriptor de poliça esperat mas '%1$S' trobat.
 PEUnknownFontDesc=Descriptor desconegut '%1$S' dins la règla @font-face.
-PEMQExpectedExpressionStart='(' esperat per aviar l'expression de requèsta de media mas '%1$S' trobat.
+PEMQExpectedExpressionStart=« ( » esperat per aviar l'expression de requèsta de mèdia mas  « %1$S » trobat.
 PEMQExpressionEOF=contenguts de l'expression de requèsta de media
 PEMQExpectedFeatureName=Nom de foncionalitat media esperat mas '%1$S' trobat.
-PEMQExpectedFeatureNameEnd=':' o ')' esperat aprèp lo nom de la foncionalitat media mas '%1$S' trobat.
+PEMQExpectedFeatureNameEnd=« : » o « ) » esperat aprèp lo nom de la foncionalitat media mas « %1$S » trobat.
 PEMQNoMinMaxWithoutValue=Las foncionalitats de media amb min- or max- devon aver una valor.
 PEMQExpectedFeatureValue=Valor invalida trobada per la foncionalitat de media.
 PEBadFontBlockStart=Esperàvem '{' per començar la règla @font-face mas avèm trobat '%1$S'.
@@ -123,8 +129,8 @@ PEBadFontBlockEnd=Expected '}' per acabar la règla @font-face mas avèm trobat'
 PEAnonBoxNotAlone=Bóstia anonima imprevista.
 PEFFVUnexpectedEOF=Fin de règla @font-feature-values inesperada.
 PEFFVBlockStart=« { » esperada per debutar una règla @font-feature-values, mas « %1$S » trobat.
-PEFFVValueSetStart='}' esperat per acabar la règla @font-face mas avèm trobat'%1$S'.
-PEFFVNoFamily='}' esperat per acabar la règla @font-feature-values mas avèm trobat '%1$S'.
+PEFFVValueSetStart=« { » esperat per acabar la règla @font-face mas avèm trobat « %1$S ».
+PEFFVNoFamily=Lista de familhas de poliças esperada per @font-feature-values, mas « %1$S » trobat.
 PEFFVUnexpectedBlockEnd=Expected '}' per acabar la règla @font-feature-values mas avèm trobat '%1$S'.
 PEFFVUnknownFontVariantPropValue=« %1$S » es una valor desconeguda per la proprietat font-variant.
 PEFFVExpectedIdent=Un nombre èra esperat, mas « %1$S » es estat trobat.
