--- a/netwerk/necko.properties
+++ b/netwerk/necko.properties
@@ -38,3 +38,4 @@ PhishingAuthAccept=Ai comprés e farai atencion.
 SuperfluousAuth=Sètz a mand de vos connectar al site « %1$S » amb lo nom d'utilizaire « %2$S », mas aqueste site Web necessita pas d'autentificacion. Se pòt agir d'una temptativa per vos enganar.\n\n« %1$S » es ben lo site que volètz visitar ?
 AutomaticAuth=Sètz a mand de vos connectar al site « %1$S » amb lo nom d'utilizaire « %2$S ».
 
+TrackingUriBlocked=La ressorsa de «%1$S» es estada blocada perqué la proteccion contra lo seguiment es activada.
