--- a/toolkit/chrome/global/aboutWebrtc.properties
+++ b/toolkit/chrome/global/aboutWebrtc.properties
@@ -33,15 +33,20 @@
 # LOCALIZATION NOTE (sdp_heading, local_sdp_heading, remote_sdp_heading):
 # "SDP" is an abbreviation for Session Description Protocol, an IETF standard.
 # See http://wikipedia.org/wiki/Session_Description_Protocol
+sdp_heading = SDP
+local_sdp_heading = SDP local
 
 # LOCALIZATION NOTE (rtp_stats_heading): "RTP" is an abbreviation for the
 # Real-time Transport Protocol, an IETF specification, and should not
 # normally be translated. "Stats" is an abbreviation for Statistics.
+rtp_stats_heading = Estatisticas d'RTP
 
 # LOCALIZATION NOTE (ice_state, ice_stats_heading): "ICE" is an abbreviation
 # for Interactive Connectivity Establishment, which is an IETF protocol,
 # and should not normally be translated. "Stats" is an abbreviation for
 # Statistics.
+ice_state = Estat d'ICE
+ice_stats_heading = Estatisticas d'ICE
 
 # LOCALIZATION NOTE (av_sync_label): "A/V" stands for Audio/Video.
 # "sync" is an abbreviation for sychronization. This is used as
@@ -57,18 +62,31 @@
 # LOCALIZATION NOTE (local, remote): These adjectives are used to label a
 # line of statistics collected for a peer connection. The data represents
 # either the local or remote end of the connection.
+local = local
 remote = distant
 
 # LOCALIZATION NOTE (nominated): This adjective is used to label a table column.
 # Cells in this column contain the localized javascript string representation of "true"
 # or are left blank.
+nominated = Nomenat
 
 # LOCALIZATION NOTE (selected): This adjective is used to label a table column.
 # Cells in this column contain the localized javascript string representation of "true"
 # or are left blank. This represents an attribute of an ICE candidate.
+selected = Seleccionat
 
 save_page_label = Enregistrar la pagina
 connection_closed = tampat
+priority = Prioritat
+fold_show_msg = afichar los detalhs
+fold_show_hint = clicatz per desvolopar aquesta seccion
+fold_hide_msg = amagar los detalhs
+fold_hide_hint = clicatz per redusir aquesta seccion
+decoder_label = Desencodador
+encoder_label = Encodador
 received_label = Recebut
+packets = paquets
+lost_label = Perduts
+jitter_label = Jitter
 sent_label = Mandat
 
