--- a/toolkit/chrome/global/autocomplete.properties
+++ b/toolkit/chrome/global/autocomplete.properties
@@ -10,6 +10,8 @@ searchWithEngine = Recercar amb %S
 # %1$S is the search engine's name, %2$S is the search query.
 # This format was chosen because the provider can also end with "Search"
 # (e.g.: MSN Search).
+searchWithEngineForQuery = %2$S — Recercar amb %1$S\u00A0
 switchToTab = Anar a l'onglet
 # LOCALIZATION NOTE (visitURL):
 # %S is the URL to visit.
+visitURL = Visitar %S
