--- a/toolkit/chrome/global/charsetMenu.properties
+++ b/toolkit/chrome/global/charsetMenu.properties
@@ -61,6 +61,7 @@ ISO-8859-2.key   =       l
 ISO-8859-2       = Euròpa centrala (ISO)
 
 # Chinese, Simplified
+gbk.bis.key      =          S
 gbk.bis          = Chinés, Simplificat
 
 # Chinese, Traditional
