--- a/toolkit/chrome/passwordmgr/passwordmgr.properties
+++ b/toolkit/chrome/passwordmgr/passwordmgr.properties
@@ -14,6 +14,7 @@ rememberPasswordMsg = Volètz enregistrar lo senhal per « %1$S » sus %2$S ?
 rememberPasswordMsgNoUsername = Volètz enregistrar lo senhal per %S ?
 # LOCALIZATION NOTE (noUsernamePlaceholder):
 # This is displayed in place of the username when it is missing.
+noUsernamePlaceholder=Pas cap de nom d'utilizaire
 notNowButtonText = &Pas ara
 notifyBarNotNowButtonText = Pas ara
 notifyBarNotNowButtonAccessKey = P
