--- a/webapprt/webapprt/overrides/appstrings.properties
+++ b/webapprt/webapprt/overrides/appstrings.properties
@@ -30,5 +30,7 @@ externalProtocolChkMsg=Se remembrar d'aquesta causida per totes los ligams d'aqu
 externalProtocolLaunchBtn=Aviar l'aplicacion
 malwareBlocked=The site at %S has been reported as an attack site and has been blocked based on your security preferences.
 phishingBlocked=Lo site Web sus %S es estat senhalat coma una contrafaiçon concebuda per enganar los utilizaires per que partejen d'informacions personalas o financièras.
+cspBlocked=Aquesta aplicacion a ensajat d'accedir a una ressorsa que possedís una estrategia de seguretat de contengut que l'empacha d'èsser integrada d'aqueste biais.
 corruptedContentError=L'aplicacion s'es arrestada perque una error dins la transmission de donadas es estada detectada.
 remoteXUL=Aquesta aplicacion utiliza una anciana tecnologia qu'es pas mai disponibla.
+sslv3Used=Aquesta aplicacion pòt pas garantir la seguretat de vòstras donadas sus %S perque utiliza SSLv3, un protocòl de seguretat pas segur.
