[oc] update from Pootle (firefox)

--- a/browser/chrome/browser/devtools/netmonitor.properties
+++ b/browser/chrome/browser/devtools/netmonitor.properties
@@ -225,7 +225,7 @@ charts.cacheDisabled=Escondedor void
 
 # LOCALIZATION NOTE (charts.totalSize): This is the label displayed
 # in the performance analysis view for total requests size, in kilobytes.
-charts.totalSize=Talha : %S KB
+charts.totalSize=Talha : %S Ko
 
 # LOCALIZATION NOTE (charts.totalSeconds): Semi-colon list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
