--- a/security/manager/chrome/pipnss/nsserrors.properties
+++ b/security/manager/chrome/pipnss/nsserrors.properties
@@ -176,7 +176,7 @@ SEC_ERROR_NOT_A_RECIPIENT=Impossible de deschifrar : sètz pas lo destinatari o
 SEC_ERROR_PKCS7_KEYALG_MISMATCH=Impossible de dechifrar : l'algoritme de chiframent de clau correspond pas a vòstre certificat.
 SEC_ERROR_PKCS7_BAD_SIGNATURE=La verificacion de signatura a fracassat : cap de signatari, tròp de signataris o donadas corrompudas o incorrèctas.
 SEC_ERROR_UNSUPPORTED_KEYALG=Algoritme de clau pas gerit o desconegut.
-SEC_ERROR_DECRYPTION_DISALLOWED=Impossible de dechifrar : chifrat en utilizant un algoritme o una talha de clau pas autorizats.
+SEC_ERROR_DECRYPTION_DISALLOWED=Impossible de deschifrar : chifrat en utilizant un algoritme o una talha de clau pas autorizats.
 XP_SEC_FORTEZZA_BAD_CARD=La carta Fortezza es pas estada inicializada corrèctament. Levatz-la e tornatz-la mandar a vòstre distributor.
 XP_SEC_FORTEZZA_NO_CARD=Cap de carta Fortezza es pas estada trobada
 XP_SEC_FORTEZZA_NONE_SELECTED=Cap de carta Fortezza es pas estada seleccionada
