[oc] update from Pootle (firefox)

--- a/browser/chrome/browser/devtools/gclicommands.properties
+++ b/browser/chrome/browser/devtools/gclicommands.properties
@@ -1489,6 +1489,8 @@ mediaResetDesc=Arrestar l'emulacion d'un tipe de mèdia CSS
 # LOCALIZATION NOTE (folderDesc, folderOpenDesc, folderOpenDir,
 # folderOpenProfileDesc) These strings describe the 'folder' commands and
 # all available parameters.
+folderDesc=Dobrir de dorsièrs
+folderOpenDesc=Dobrir un camin de dorsièr
 
 # LOCALIZATION NOTE (folderInvalidPath) A string displayed as the result
 # of the 'folder open' command with an invalid folder path.
