--- a/browser/chrome/browser/devtools/timeline.properties
+++ b/browser/chrome/browser/devtools/timeline.properties
@@ -52,4 +52,5 @@ timeline.markerDetailFormat=%1$S (%2$S)
 # Strings used in the waterfall sidebar.
 timeline.markerDetail.start=Aviar :
 timeline.markerDetail.end=Fin :
+timeline.markerDetail.duration=Durada :
 timeline.markerDetail.stack=Pila :
