--- a/browser/chrome/browser/devtools/debugger.properties
+++ b/browser/chrome/browser/devtools/debugger.properties
@@ -318,3 +318,4 @@ resumptionOrderPanelTitle=I a un o mantun desbugador en pausa. D'en primièr, re
 variablesViewUninitialized=(pas inicializat)
 variablesViewMissingArgs=(indisponible)
 
+evalGroupLabel=Fonts avaloradas
