[oc] update from Pootle (firefox)

--- a/browser/chrome/browser/devtools/timeline.properties
+++ b/browser/chrome/browser/devtools/timeline.properties
@@ -33,7 +33,10 @@ timeline.tick=%S ms
 # LOCALIZATION NOTE (timeline.label.*):
 # These strings are displayed in the timeline waterfall, identifying markers.
 # We want to use the same wording as Google Chrome
+timeline.label.styles2=Recalcular los estils
+timeline.label.reflow2=Disposicion
 timeline.label.paint=Zòna actualizada
+timeline.label.domevent=Eveniment DOM
 timeline.label.consoleTime=Consòla :
 
 # LOCALIZATION NOTE (graphs.memory):
@@ -53,4 +56,8 @@ timeline.markerDetailFormat=%1$S (%2$S)
 timeline.markerDetail.start=Aviar :
 timeline.markerDetail.end=Fin :
 timeline.markerDetail.duration=Durada :
+timeline.markerDetail.consoleTimerName=Nom del temporizador :
+timeline.markerDetail.DOMEventType=Tipes d'eveniment :
+timeline.markerDetail.DOMEventPhase=Fasa :
+timeline.markerDetail.DOMEventTargetPhase=Cibla
 timeline.markerDetail.stack=Pila :
