--- a/browser/chrome/browser/devtools/webconsole.properties
+++ b/browser/chrome/browser/devtools/webconsole.properties
@@ -254,6 +254,8 @@ messageToggleDetails=Afichar/amagar los detalhs del messatge.
 
 # LOCALIZATION NOTE (table.index, table.iterationIndex, table.key, table.value):
 # the column header displayed in the console table widget.
+table.index=(indèx)
+table.iterationIndex=(indèx d'iteracion)
 table.key=Clau
 table.value=Valors
 
