--- a/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -97,6 +97,7 @@ quit-button.tooltiptext.mac = Quitar %1$S (%2$S)
 
 # LOCALIZATION NOTE(loop-call-button3.label): This is a brand name, request
 # approval before you change it.
+loop-call-button3.tooltiptext = Començar una conversacion
 
 social-share-button.label = Partejar aquesta pagina
 social-share-button.tooltiptext = Partejar aquesta pagina
