--- a/browser/chrome/browser/devtools/gclicommands.properties
+++ b/browser/chrome/browser/devtools/gclicommands.properties
@@ -1491,6 +1491,7 @@ mediaResetDesc=Arrestar l'emulacion d'un tipe de mèdia CSS
 # all available parameters.
 folderDesc=Dobrir de dorsièrs
 folderOpenDesc=Dobrir un camin de dorsièr
+folderOpenDir=Camin de dorsièr
 
 # LOCALIZATION NOTE (folderInvalidPath) A string displayed as the result
 # of the 'folder open' command with an invalid folder path.
