--- a/browser/chrome/browser/devtools/netmonitor.properties
+++ b/browser/chrome/browser/devtools/netmonitor.properties
@@ -170,6 +170,7 @@ networkMenu.sizeKB=%S Ko
 # LOCALIZATION NOTE (networkMenu.sizeUnavailable): This is the label displayed
 # in the network menu specifying the transferred size of a request is
 # unavailable.
+networkMenu.sizeUnavailable=—
 
 # LOCALIZATION NOTE (networkMenu.totalMS): This is the label displayed
 # in the network menu specifying the time for a request to finish (in milliseconds).
