--- a/browser/chrome/browser/devtools/profiler.properties
+++ b/browser/chrome/browser/devtools/profiler.properties
@@ -13,6 +13,7 @@
 # LOCALIZATION NOTE (profiler.label):
 # This string is displayed in the title of the tab when the profiler is
 # displayed inside the developer tools window and in the Developer Tools Menu.
+profiler.label2=Performància
 
 # LOCALIZATION NOTE (profiler.panelLabel):
 # This is used as the label for the toolbox panel.
@@ -20,6 +21,7 @@
 # LOCALIZATION NOTE (profiler2.commandkey, profiler.accesskey)
 # Used for the menuitem in the tool menu
 profiler.commandkey2=VK_F5
+profiler.accesskey=P
 
 # LOCALIZATION NOTE (profiler.tooltip2):
 # This string is displayed in the tooltip of the tab when the profiler is
@@ -33,10 +35,12 @@ noRecordingsText=I a pas encara cap de perfil.
 # LOCALIZATION NOTE (recordingsList.itemLabel):
 # This string is displayed in the recordings list of the Profiler,
 # identifying a set of function calls.
+recordingsList.itemLabel=Enregistrament de #%S
 
 # LOCALIZATION NOTE (recordingsList.recordingLabel):
 # This string is displayed in the recordings list of the Profiler,
 # for an item that has not finished recording.
+recordingsList.recordingLabel=En cors…
 
 # LOCALIZATION NOTE (recordingsList.durationLabel):
 # This string is displayed in the recordings list of the Profiler,
@@ -56,25 +60,33 @@ recordingsList.saveLabel=Enregistrar
 # This string is displayed in the framerate graph of the Profiler,
 # as the unit used to measure frames per second. This label should be kept
 # AS SHORT AS POSSIBLE so it doesn't obstruct important parts of the graph.
+graphs.fps=fps
 
 # LOCALIZATION NOTE (graphs.ms):
 # This string is displayed in the flamegraph of the Profiler,
 # as the unit used to measure time (in milliseconds). This label should be kept
 # AS SHORT AS POSSIBLE so it doesn't obstruct important parts of the graph.
+graphs.ms=ms
 
 # LOCALIZATION NOTE (category.*):
 # These strings are displayed in the categories graph of the Profiler,
 # as the legend for each block in every bar. These labels should be kept
 # AS SHORT AS POSSIBLE so they don't obstruct important parts of the graph.
+category.other=Gecko
+category.css=Estils
+category.js=JIT
+category.gc=GC
 category.network=Ret
 category.graphics=Acceleracion grafica
 category.storage=Emmagazinatge
 
 # LOCALIZATION NOTE (graphs.ms):
 # This string is displayed in the call tree after units of time in milliseconds.
+table.ms=ms
 
 # LOCALIZATION NOTE (graphs.ms):
 # This string is displayed in the call tree after units representing percentages.
+table.percentage=%
 
 # LOCALIZATION NOTE (table.root):
 # This string is displayed in the call tree for the root node.
