--- a/browser/chrome/browser/devtools/storage.properties
+++ b/browser/chrome/browser/devtools/storage.properties
@@ -56,12 +56,16 @@ table.headers.cookies.path=Camin
 table.headers.cookies.host=Domeni
 table.headers.cookies.expires=Expira lo
 table.headers.cookies.value=Valor
+table.headers.cookies.lastAccessed=Darrièr accès
+table.headers.cookies.creationTime=Data de creacion
 # LOCALIZATION NOTE (table.headers.cookies.isHttpOnly):
 # This string is used in the header for the column which denotes whether a
 # cookie is HTTP only or not.
+table.headers.cookies.isHttpOnly=isHttpOnly
 # LOCALIZATION NOTE (table.headers.cookies.isSecure):
 # This string is used in the header for the column which denotes whether a
 # cookie can be accessed via a secure channel only or not.
+table.headers.cookies.isSecure=isSecure
 # LOCALIZATION NOTE (table.headers.cookies.isDomain):
 # This string is used in the header for the column which denotes whether a
 # cookie is a domain cookie only or not.
@@ -74,6 +78,8 @@ table.headers.sessionStorage.name=Clau
 table.headers.sessionStorage.value=Valor
 
 table.headers.indexedDB.name=Clau
+table.headers.indexedDB.db=Nom de la banca de donadas
+table.headers.indexedDB.objectStore=Nom del magazin d'objèctes
 table.headers.indexedDB.value=Valor
 table.headers.indexedDB.version=Version
 table.headers.indexedDB.keyPath=Clau
@@ -92,3 +98,4 @@ storage.data.label=Donadas
 
 # LOCALIZATION NOTE (storage.parsedValue.label):
 # This is the heading displayed over the item parsed value in the sidebar
+storage.parsedValue.label=Valor analizada
