--- a/browser/chrome/browser/loop/loop.properties
+++ b/browser/chrome/browser/loop/loop.properties
@@ -182,20 +182,29 @@ feedback_category_other2=Autres
 ## In this item, don't translate the part between {{..}}
 ## LOCALIZATION_NOTE (feedback_rejoin_button): Displayed on the feedback form after
 ## a signed-in to signed-in user call.
+feedback_rejoin_button=Rejónher
 ## LOCALIZATION NOTE (feedback_report_user_button): Used to report a user in the case of
 ## an abusive user.
+feedback_report_user_button=Denonciat l'utilizaire
 
 help_label=Ajuda
+tour_label=Visita guidada
 
 ## LOCALIZATION NOTE(rooms_default_room_name_template): {{conversationLabel}}
 ## will be replaced by a number. For example "Conversation 1" or "Conversation 12".
+rooms_default_room_name_template=Conversacion {{conversationLabel}}
 rooms_leave_button_label=Quitar
+rooms_list_copy_url_tooltip=Copiar lo ligam
 ## LOCALIZATION NOTE (rooms_list_current_conversations):
 ## Semicolon-separated list of plural forms. See:
 ## http://developer.mozilla.org/en/docs/Localization_and_Plurals
 ## We prefer to have no number in the string, but if you need it for your
 ## language please use {{num}}.
+rooms_list_current_conversations=Conversacion actuala;Conversacions actualas
+rooms_list_delete_tooltip=Suprimir la conversacion
 rooms_list_deleteConfirmation_label=Sètz segur ?
+rooms_new_room_button_label=Començar una conversacion
+rooms_only_occupant_label=Sètz lo primièr participant.
 
 # Infobar strings
 
@@ -208,6 +217,10 @@ infobar_menuitem_dontshowagain_label=Me demandar pas pus
 # separate line. If this structure doesn't work for your locale, you might want
 # to consider this as a stand-alone title. See example screenshot:
 # https://bug1115342.bugzilla.mozilla.org/attachment.cgi?id=8563677
+context_inroom_label=Parlem de :
 ## LOCALIZATION_NOTE (context_edit_activate_label): {{title}} will be replaced
 ## by the title of the active tab, also known as the title of an HTML document.
 ## The quotes around the title are intentional.
+context_edit_activate_label=Conversacion sus «{{title}}»
+context_edit_name_placeholder=Nom de la conversacion
+context_edit_comments_placeholder=Comentaris
