--- a/toolkit/chrome/global/aboutSupport.properties
+++ b/toolkit/chrome/global/aboutSupport.properties
@@ -83,6 +83,8 @@ webglRenderer = Rendut WebGL
 minLibVersions = Version minimala esperada
 loadedLibVersions = Version utilizada
 
+hasUserNamespaces = Espacis de noms de l'utilizaire
+hasPrivilegedUserNamespaces = Espacis de noms de l'utilizaire per processus privilegiats
 
 # LOCALIZATION NOTE %1$S and %2$S will be replaced with the number of remote and the total number
 # of windows, respectively, while %3$S will indicate whether windows are remote by default ('true'
