[oc] update from Pootle (firefox-beta)

--- a/browser/chrome/browser/devtools/animationinspector.properties
+++ b/browser/chrome/browser/devtools/animationinspector.properties
@@ -13,6 +13,7 @@
 # LOCALIZATION NOTE (player.animationNameLabel):
 # This string is displayed in each animation player widget. It is the label
 # displayed before the animation name.
+player.animationNameLabel=Animacion :
 
 # LOCALIZATION NOTE (player.transitionNameLabel):
 # This string is displayed in each animation player widget. It is the label
@@ -22,6 +23,10 @@
 # LOCALIZATION NOTE (player.animationDurationLabel):
 # This string is displayed in each animation player widget. It is the label
 # displayed before the animation duration.
+
+# LOCALIZATION NOTE (player.animationDelayLabel):
+# This string is displayed in each animation player widget. It is the label
+# displayed before the animation delay.
 
 # LOCALIZATION NOTE (player.animationIterationCountLabel):
 # This string is displayed in each animation player widget. It is the label
@@ -35,3 +40,4 @@
 # This string is displayed in each animation player widget, to indicate either
 # how long (in seconds) the animation lasts, or what is the animation's current
 # time (in seconds too);
+player.timeLabel=%Ss
