--- a/browser/chrome/browser/devtools/webide.properties
+++ b/browser/chrome/browser/devtools/webide.properties
@@ -8,6 +8,7 @@ mainProcess_label=Processus principal
 
 
 
+notification_showTroubleShooting_label=Depanatge
 
 # LOCALIZATION NOTE (project_tab_loading): This is shown as a temporary tab
 # title for browser tab projects when the tab is still loading.
@@ -23,6 +24,8 @@ project_tab_loading=Cargament...
 # Variable: error message (in english)
 
 
+addons_stable=estable
+addons_unstable=pas estable
 # LOCALIZATION NOTE (addons_simulator_label): This label is shown as the name of
 # a given simulator version in the "Manage Simulators" pane.  %1$S: Firefox OS
 # version in the simulator, ex. 1.3.  %2$S: Simulator stability label, ex.
@@ -38,4 +41,4 @@ addons_status_installing=installacion en cors
 # Validation status
 status_error=ERRORS
 
-# Preferences
+# Device preferences and settings
