--- a/browser/chrome/browser/loop/loop.properties
+++ b/browser/chrome/browser/loop/loop.properties
@@ -7,28 +7,11 @@
 ## LOCALIZATION NOTE(clientShortname2): This should not be localized and
 ## should remain "Firefox Hello" for all locales.
 
+
 ## LOCALIZATION_NOTE(first_time_experience.title): clientShortname will be
 ## replaced by the brand name
 first_time_experience_button_label=Per començar
 
-
-## LOCALIZATION NOTE(invitee_name_label): Displayed when obtaining a url.
-## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#precall-firstrun
-## Click the label icon at the end of the url field.
-## LOCALIZATION NOTE(invitee_expire_days_label): Allows the user to adjust
-## the expiry time. Click the label icon at the end of the url field to see where
-## this is:
-## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#precall-firstrun
-## Semicolon-separated list of plural forms. See:
-## http://developer.mozilla.org/en/docs/Localization_and_Plurals
-## In this item, don't translate the part between {{..}}
-## LOCALIZATION NOTE(invitee_expire_hours_label): Allows the user to adjust
-## the expiry time. Click the label icon are the end of the url field to see where
-## this is:
-## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#precall-firstrun
-## Semicolon-separated list of plural forms. See:
-## http://developer.mozilla.org/en/docs/Localization_and_Plurals
-## In this item, don't translate the part between {{..}}
 
 # Status text
 
@@ -43,13 +26,16 @@ first_time_experience_button_label=Per començar
 retry_button=Tornar ensajar
 
 ## LOCALIZATION NOTE (share_email_body4): In this item, don't translate the
-## part between {{..}} and leave the \r\n\r\n part alone
-share_button=Corrièr electronic
+## part between {{..}} and leave the \n\n part alone
+
 share_button2=Mandar lo ligam per mail
-copy_url_button=Copiar
 
 
+settings_menu_item_account=Compte
+settings_menu_item_settings=Paramètres
+settings_menu_item_signout=Se desconnectar
 settings_menu_item_signin=Connexion
+settings_menu_button_tooltip=Paramètres
 
 # Contact Strings (Panel)
 
@@ -65,6 +51,7 @@ contacts_search_placesholder=Recercar...
 ## These are the placeholders for the fields for entering a new contact
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
 ## and click the 'New Contact' button to see the fields.
+new_contact_name_placeholder=Nom
 
 
 ## LOCALIZATION NOTE (add_contact_button):
@@ -83,6 +70,11 @@ valid_email_text_description=Picatz una adreça electronica valida
 ## for where these appear on the UI
 import_contacts_button=Importar
 importing_contacts_progress_button=Importacion...
+## LOCALIZATION NOTE(import_contacts_success_message): Success notification message
+## when user's contacts have been successfully imported.
+## Semicolon-separated list of plural forms. See:
+## http://developer.mozilla.org/en/docs/Localization_and_Plurals
+## In this item, don't translate the part between {{..}}
 ## LOCALIZATION NOTE(sync_contacts_button): This button is displayed in place of
 ## importing_contacts_button once contacts have been imported once.
 
@@ -132,6 +124,10 @@ edit_contact_done_button=Acabat
 ## LOCALIZATION NOTE(video_call_menu_button): Displayed in the contact list in a
 ## pop-up menu next to the contact's name.
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+
+## LOCALIZATION NOTE(gravatars_promo_message): The {{learn_more}} part will be
+## replaced with a link with the text content of gravatars_promo_message_learnmore.
+gravatars_promo_button_nothanks=Non, mercé
 
 # Conversation Window Strings
 
@@ -195,13 +191,23 @@ powered_by_afterLogo=
 ## LOCALIZATION NOTE (feedback_report_user_button): Used to report a user in the case of
 ## an abusive user.
 
+help_label=Ajuda
+tour_label=Visita guidada
 
 ## LOCALIZATION NOTE(rooms_default_room_name_template): {{conversationLabel}}
 ## will be replaced by a number. For example "Conversation 1" or "Conversation 12".
+rooms_default_room_name_template=Conversacion {{conversationLabel}}
 rooms_leave_button_label=Quitar
+rooms_list_copy_url_tooltip=Copiar lo ligam
 ## LOCALIZATION NOTE (rooms_list_current_conversations):
 ## Semicolon-separated list of plural forms. See:
 ## http://developer.mozilla.org/en/docs/Localization_and_Plurals
 ## We prefer to have no number in the string, but if you need it for your
 ## language please use {{num}}.
+rooms_list_current_conversations=Conversacion actuala;Conversacions actualas
 rooms_list_deleteConfirmation_label=Sètz segur ?
+
+# Infobar strings
+
+infobar_button_gotit_label=Ai comprés !
+infobar_menuitem_dontshowagain_label=Me demandar pas pus
