--- a/security/manager/chrome/pipnss/nsserrors.properties
+++ b/security/manager/chrome/pipnss/nsserrors.properties
@@ -122,6 +122,10 @@ SSL_ERROR_NEXT_PROTOCOL_DATA_INVALID=SSL a recebut de las donadas d'extension NP
 SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_SSL2=Foncionalitat SSL pas gerida per las connexions SSL 2.0.
 SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_SERVERS=Foncionalitat SSL pas gerida pels servidors.
 SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_CLIENTS=Foncionalitat SSL pas gerida pels clients.
+SSL_ERROR_RX_MALFORMED_HELLO_VERIFY_REQUEST=SSL a recebut un messatge d'establiment de ligason « Hello Verify Request » mal format.
+SSL_ERROR_RX_UNEXPECTED_HELLO_VERIFY_REQUEST=SSL a recebut un messatge d'establiment de ligason « Hello Verify Request » imprevist.
+SSL_ERROR_RX_UNEXPECTED_CERT_STATUS=SSL a recebut un messatge d'establiment de ligason « Certificate Status » inesperat.
+SSL_ERROR_DIGEST_FAILURE=La foncion de pretractament a fracassat.
 SEC_ERROR_IO=Una error d'entrada/sortida s'es producha pendent l'autorizacion de seguretat.
 SEC_ERROR_LIBRARY_FAILURE=Fracàs de la bibliotèca de seguretat.
 SEC_ERROR_BAD_DATA=Bibliotèca de seguretat : donadas incorrèctas recebudas.
