--- a/security/manager/chrome/pippki/pippki.properties
+++ b/security/manager/chrome/pippki/pippki.properties
@@ -11,7 +11,6 @@ newCAMessage1=Volètz far fisança a « %S » per las accions seguentas ?
 unnamedCA=Autoritat de certificacion (pas de nom)
 
 #For editing cert trust
-editTrustWindowTitle=Modificar lo certificat de fisança
 editTrustCA=Lo certificat « %S » representa una autoritat de certificacion.
 editTrustEmail=Lo certificat « %S » es estat emés per :
 issuerNotTrusted=Coma fasètz pas fisança a l'autoritat qu'a emes aqueste certificat, vos cal pas far fisança dins l'autenticitat del certificat, en defòra d'una mencion contrària exprimida aicí.
@@ -44,10 +43,7 @@ deleteOrphanCertTitle=Suprimir de certificats
 chooseP12RestoreFileDialog2=Fichièr de certificat d'importar
 chooseP12BackupFileDialog=Nom de fichièr de salvagardar
 file_browse_PKCS12_spec=Fichièrs PKCS12
-
-
-#Preferences
-resetPreferences=Utilizatz aqueste boton per tornar metre las preferéncias de seguretat de %S a lors valors inicialas.
+getPKCS12FilePasswordMessage=Picatz lo senhal portable de seguretat que protegís aqueste certificat de seguretat e la clau privada.
 
 #Cert verification
 certVerified=Aqueste certificat es estat verificat per las utilizacions seguentas :
@@ -65,24 +61,21 @@ clientAuthMessage1=Organizacion : "%S"
 clientAuthMessage2=Emes jos : « %S »
 
 #Page Info
-pageInfo_SiteNotVerified=Identitat del site web pas verificada
-pageInfo_WebSiteVerified=Identitat del site web verificada
-pageInfo_Identity_Verified=Lo site Web %S suporta l'autentificacion per la pagina qu'anatz veire. L'identitat del site Web es estada verificada per %S, una autoritat de certificat qu'avètz causida per aqueste prètzfach.
-pageInfo_ViewCertificate=Veire lo certificat de seguretat que verifica l'identitat del site Web.
 pageInfo_NoEncryption=Connexion pas criptada
 pageInfo_Privacy_None1=Lo site Web %S supòrta pas lo chiframent per la pagina actualament afichada.
 pageInfo_Privacy_None2=Las entresenhas mandadas sus Internet sens chiframent pòdon èsser vistas per d'autras personas durant lor transit.
 pageInfo_Privacy_None3=La pagina que sètz a visualizar es pas criptada.
-# LOCALIZATION NOTE (pageInfo_EncryptionWithBitsAndProtocol): %1$S is the name of the encryption standard,
+# LOCALIZATION NOTE (pageInfo_EncryptionWithBitsAndProtocol and pageInfo_BrokenEncryption):
+# %1$S is the name of the encryption standard,
 # %2$S is the key size of the cipher.
 # %3$S is protocol version like "SSL 3" or "TLS 1.2"
 pageInfo_Privacy_Encrypted1=La pagina que vesètz es estada chifrada abans sa transmission sus Internet.
+pageInfo_Privacy_Encrypted2=Lo chiframent fa fòrt dificil a las personas pas autorizadas la visualizacion de la pagina durant son transit entre ordenadors. Doncas, es fòrt improbable que qualqu'un pòsca legir aquesta pagina durant son transit sus la ret.
 pageInfo_MixedContent=Connexion parcialament chifrada
 
 #Cert Viewer
 certDetails=Detalhs del certificat :
 notPresent=<Fa pas partida del certificat>
-unknownIssuer=<Emeteire desconegut>
 
 escrowFinalMessage=Vos cal pas clicar sus OK que se fasètz fisança a « %S » per protegir vòstra clau privada de chiframent.
 
@@ -146,11 +139,11 @@ addExceptionInvalidHeader=Aqueste sit ensaja de s'identificar ele-meteis amb d'e
 addExceptionDomainMismatchShort=Sit marrit
 addExceptionExpiredShort=Entresenhas obsoletas
 addExceptionUnverifiedOrBadSignatureShort=Identitat desconeguda
+addExceptionUnverifiedOrBadSignatureLong2=Lo certificat es pas segur perque es pas estat verificat per una autoritat reconeguda.
 addExceptionValidShort=Certificat valid
 addExceptionValidLong=Aqueste sit provesís una identificacion valida e certificada. Es pas necessari d'apondre una excepcion.
 addExceptionCheckingShort=Verificacion de las entresenhas
 addExceptionNoCertShort=Pas d'entresenhas disponiblas
-addExceptionConnectionFailed=La connexion a pas capitat
 
 #Certificate Exists in database
 caCertExistsTitle=Lo certificat existís
