--- a/toolkit/chrome/global/aboutTelemetry.properties
+++ b/toolkit/chrome/global/aboutTelemetry.properties
@@ -7,6 +7,7 @@
 # - %2$S will be replaced with the value of the toolkit.telemetry.server_owner preference
 pageSubtitle = Aquesta pagina aficha las informacions collectadas per telemetria a prepaus de las performàncias, las caracteristicas materialas, l'utilizacion de las foncionalitats e la personalizacion del navigador. Aquelas informacions son mandadas a %1$S per ajudar al melhorament de %2$S.
 
+
 generalDataHeadingName = Nom
 
 
@@ -49,6 +50,7 @@ enableTelemetry = Activar la telemetria
 
 keysHeader = Proprietat
 
+valuesHeader = Valor
 
 addonTableID = Identificant del modul
 
