--- a/toolkit/chrome/global/browser.properties
+++ b/toolkit/chrome/global/browser.properties
@@ -8,3 +8,7 @@ browsewithcaret.checkLabel=La quichada sus F7 activa o desactiva la navigacion a
 browsewithcaret.checkButtonLabel=Òc
 
 plainText.wordWrap=Retorn a la linha automatica
+
+formPostSecureToInsecureWarning.title = Avertiment de seguretat
+formPostSecureToInsecureWarning.message = Sètz a mand de mandar sus una connexion pas criptada las entresenhas qu'avètz picadas sus e un tèrç las poiriá legir aisidament.\n\nSètz segur que volètz contunhar a enviar aquestas entresenhas ?
+formPostSecureToInsecureWarning.continue = Contunhar
