--- a/browser/chrome/browser/devtools/debugger.properties
+++ b/browser/chrome/browser/devtools/debugger.properties
@@ -314,3 +314,7 @@ functionSearchSeparatorLabel=←
 # The substitution parameter is the URL of the last paused window that must be
 # resumed first.
 resumptionOrderPanelTitle=I a un o mantun desbugador en pausa. D'en primièr, reprenètz lo desbugador mes a jorn lo mai recentament a : %S
+
+variablesViewUninitialized=(pas inicializat)
+variablesViewMissingArgs=(indisponible)
+
