--- a/browser/chrome/browser/devtools/storage.properties
+++ b/browser/chrome/browser/devtools/storage.properties
@@ -52,6 +52,7 @@ tree.labels.cookies=Cookies
 table.headers.cookies.name=Nom
 table.headers.cookies.path=Camin
 table.headers.cookies.host=Domeni
+table.headers.cookies.value=Valor
 # LOCALIZATION NOTE (table.headers.cookies.isHttpOnly):
 # This string is used in the header for the column which denotes whether a
 # cookie is HTTP only or not.
@@ -80,6 +81,7 @@ table.headers.indexedDB.keyPath=Clau
 
 # LOCALIZATION NOTE (storage.search.placeholder):
 # This is the placeholder text in the sidebar search box
+storage.search.placeholder=Filtrar las valors
 
 # LOCALIZATION NOTE (storage.data.label):
 # This is the heading displayed over the item value in the sidebar
