--- a/browser/chrome/browser/devtools/webconsole.properties
+++ b/browser/chrome/browser/devtools/webconsole.properties
@@ -70,6 +70,11 @@ ConsoleAPIDisabled=L'API de la consòla de jornalizacion (console.log, console.i
 # the URL the correct direction. Parameters: %S is the web page URL.
 webConsoleWindowTitleAndURL=Consòla Web - %S
 
+# LOCALIZATION NOTE (webConsoleXhrIndicator): the indicator displayed before
+# a URL in the Web Console that was requested using an XMLHttpRequest.
+# Should probably be the same as &btnConsoleXhr; in webConsole.dtd
+webConsoleXhrIndicator=XHR
+
 # LOCALIZATION NOTE (webConsoleMixedContentWarning): the message displayed
 # after a URL in the Web Console that has been flagged for Mixed Content (i.e.
 # http content in an https page).
@@ -249,3 +254,12 @@ messageToggleDetails=Afichar/amagar los detalhs del messatge.
 
 # LOCALIZATION NOTE (table.index, table.iterationIndex, table.key, table.value):
 # the column header displayed in the console table widget.
+table.key=Clau
+table.value=Valors
+
+# LOCALIZATION NOTE (severity.error, severity.warn, severity.info, severity.log):
+# tooltip for icons next to console output
+severity.error=Error
+severity.warn=Avertiment
+severity.info=Info
+severity.log=Log
