--- a/browser/chrome/overrides/appstrings.properties
+++ b/browser/chrome/overrides/appstrings.properties
@@ -31,5 +31,7 @@ externalProtocolChkMsg=Se remembrar d'aqquesta causida per totes los ligams d'aq
 externalProtocolLaunchBtn=Aviar l'aplicacion
 malwareBlocked=The site at %S has been reported as an attack site and has been blocked based on your security preferences.
 phishingBlocked=Lo site Web sus %S es estat senhalat coma una contrafaiçon concebuda per enganar los utilizaires per que partejen d'informacions personalas o financièras.
+cspBlocked=Aquesta pagina a una estrategia de seguretat de contengut que l'empacha d'èsser integrada d'aquesta faiçon.
 corruptedContentError=La pagina qu'ensajatz de veire pòt pas èsser afichada perque una error dins la transmission de donadas es estada detectada.
 remoteXUL=Aquesta pagina utiliza una anciana tecnologia qu'es pas mai disponibla per defaut.
+## LOCALIZATION NOTE (sslv3Used) - Do not translate "%S".
