--- a/dom/chrome/security/security.properties
+++ b/dom/chrome/security/security.properties
@@ -4,7 +4,7 @@ BlockMixedDisplayContent = Blocatge del cargament del contengut mixte pas actiu 
 BlockMixedActiveContent = Blocatge del cargament del contengut mixte actiu (mixed active content) « %1$S »
 
 # CORS
-CrossSiteRequestBlocked=Una demanda multioriginas (Cross-Origin Request) es estada blocada : la politica « Same Origin » permet pas de consultar la ressorsa distanta situada sus %1$S. Aquò pòt èsser corregit en desplaçant la ressorsa sul meteis domeni o en activant CORS.
+# LOCALIZATION NOTE: Do not translate "Access-Control-Allow-Origin", Access-Control-Allow-Credentials, Access-Control-Allow-Methods, Access-Control-Allow-Headers
 
 # LOCALIZATION NOTE: Do not translate "Strict-Transport-Security" or "HSTS"
 InvalidSTSHeaders=Lo site a especificat una entèsta Strict-Transport-Security invalida.
@@ -14,6 +14,8 @@ InsecurePasswordsPresentOnPage=Camps senhal presents sus una pagina pas securiza
 InsecureFormActionPasswordsPresent=Camps senhal presents dins un formulari que possedís una accion de formulari pas securizada (http://). Aquò representa un risc de seguretat que permet lo raubatòri d'identificants de connexion.
 InsecurePasswordsPresentOnIframe=Camps senhal presents dins una iframe pas securizada (http://). Aquò representa un risc de seguretat que permet lo raubatòri d'identificants de connexion.
 # LOCALIZATION NOTE: "%1$S" is the URI of the insecure mixed content resource
+LoadingMixedActiveContent2=Cargament de contengut mixte actiu (pas securizat) sus una pagina securizada « %1$S »
+LoadingMixedDisplayContent2=Cargament de contengut mixte non actiu (pas securizat) sus una pagina securizada « %1$S »
 # LOCALIZATION NOTE: Do not translate "allow-scripts", "allow-same-origin", "sandbox" or "iframe"
 
 # LOCALIZATION NOTE: Do not translate "SSL 3.0".
